--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,13 @@
 <footer class="container-fluid bh-absolute-bottom">
     <div class="row">
-        <div class="col">footer</div>
+        <div class="col">
+            <p>
+                Ⓒ 2018 • Autimismus.vzw
+                <br>In samenwerking met Gielen Marie en Arteveldehogeschool
+            </p>
+
+  
+        </div>
     </div>
 </footer>
 
