--- a/_includes/nav_ver_c.html
+++ b/_includes/nav_ver_c.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light flex-column custom-nav-ver">
 
     <a class="navbar-brand" href="#">
-        <img width="120%" src="{{ '/images/logo/logo.png' | relative_url }}">
+        <img src="{{ '/images/logo/logo.png' | relative_url }}">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavigation" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
