--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-weight: $font-weight-light;
+    font-weight: $font-weight-base;
     font-size: 4rem;
     color: $color-grey-2;
 }
