--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,11 +13,11 @@ $color-grey-5:rgba(10,10,10,1);
 $color-black:rgba(0,0,0,1);
 
 // Website
-$mycolor-1:rgba(162,139,119,1);
-$mycolor-2:rgba(80,69,57,1);
-$mycolor-3:rgba(193,173,121,1);
-$mycolor-4:rgba(147,131,86,1);
-$mycolor-5:rgba(155,59,29,1);
+$mycolor-1:#2e2d60;
+$mycolor-2:#515ea4;
+$mycolor-3:#d16a5c;
+$mycolor-4:#e1a280;
+$mycolor-5:#68a8de;
 
 $body-bg: $color-white;
 $body-color: $color-grey-4;
@@ -37,14 +37,14 @@ $clientcolor-5:rgba(250,120,120,1);
 
 // Imports
 // Website
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Client specific
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // type
-$myfont-family-base: 'Raleway', serif;
-$myfont-family-title: $myfont-family-base;
+$myfont-family-base: 'nunito', sans-serif;
+$myfont-family-title: 'Nunito';
 
 // sizes
 $font-size-base: 16px;
@@ -58,8 +58,8 @@ $font-weight-bold: 800;
 //------------------------------
 
 // type
-$clientfont-family-base: 'Raleway', serif;
-$clientfont-family-title: $myfont-family-base;
+$clientfont-family-base: 'nunito', sans-serif;
+$clientfont-family-title: 'nunito';
 
 // sizes
 $client-font-size-base: 16px;
