--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,21 @@
 <footer class="container-fluid bh-absolute-bottom">
-    <div class="row">
-        <div class="col">
-            <p>
-                Ⓒ 2018 • Autimismus.vzw
-                <br>In samenwerking met Gielen Marie en Arteveldehogeschool
-            </p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p>
+                    Ⓒ 2018 • Autimismus.vzw
+                    <br>In samenwerking met Gielen Marie en Arteveldehogeschool
+                </p>
+                <a href="">
+                    <img width="10%" src="{{ '/images/logo/logo-wit.png' | relative_url }}">
+                </a>
+                &nbsp; &nbsp; &nbsp;
+                <a href="">
+                    <img width="16%" src="{{ '/images/logo/logo_arteveldehogeschool.png' | relative_url }}">
+                </a>
 
-  
+    
+            </div>
         </div>
     </div>
 </footer>
