--- a/_includes/nav_hor.html
+++ b/_includes/nav_hor.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light navbar-custom">
     <div class="container"><!-- <<< verwijder als je navigatie over de ganse breedte wenst -->
         <a class="navbar-brand" href="#">
             <img class="logo" src="{{ '/images/logo/logo-apart.png' | relative_url }}">
