--- a/_layouts/horizontal.html
+++ b/_layouts/horizontal.html
@@ -13,7 +13,7 @@
 
 {% include nav_hor.html %}
 
-<div class="container">
+<div class="container content">
     <div class="row">
         <div class="col-12 col-md-3 col-lg-2 order-md-12">
             <nav id="toc" data-toggle="toc"></nav>
