--- a/_layouts/horizontal.html
+++ b/_layouts/horizontal.html
@@ -13,16 +13,18 @@
 
 {% include nav_hor.html %}
 
-<div class="container content">
+<div class="container">
     <div class="row">
-        <div class="col-12 col-md-3 col-lg-2 order-md-12">
-            <nav id="toc" data-toggle="toc"></nav>
+        <div class="col-3 patroon">
+
         </div>
-        <main class="col-12 col-md-9 col-lg-10 content">
+        <main class="col-8 col-md-8 col-lg-8 content">
                 {{ content }}
         </main>
     </div>
 </div>
+
+
 
 {% include footer.html %}
 {% include scripts-bottom.html %}
