--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -2,7 +2,7 @@
 
 body {
     font-family: $myfont-family-base;
-    font-weight: $font-weight-base;
+    font-weight: $font-weight-light;
     font-size: $font-size-base;
     line-height: $lineheight-base;
     background-color: $body-bg;
@@ -15,38 +15,48 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-weight: $font-weight-base;
+    font-weight: $font-weight-bold;
     font-size: 4rem;
-    color: $color-grey-2;
+    color: $mycolor-1;
 }
 h2 {
-    font-weight: $font-weight-light;
+    font-weight: $font-weight-base;
+    font-style: italic;
     font-size: 2rem;
     margin: 2rem 0 1rem;
+    color:$mycolor-2;
 }
 h3, h4, h5, h6 {
     font-size: 1rem;
     margin: 2rem 0 0;
+    font-weight: $font-weight-bold;
+    text-transform:uppercase;
 }
 a {
     text-decoration: none;
     color: $body-link;
-    border-bottom: dotted 1px $body-link;
     &:hover{
-        color: $body-link;
+        color: $mycolor-5;
         text-decoration: none;
-        border-bottom: solid 1px $body-link;
     }
     &:active{
         background-color: $body-link;
+        border-radius: 5px;
+        padding:2px;
         color: $color-white;
     }
     &:focus{}
 }
+
 blockquote {
-    padding-left: 24px;
-    border-left: 2px solid $mycolor-5;
-}
+    background: $mycolor-4;
+    color:$color-white;
+    margin-left:0;
+    padding:1px 30px;
+  }
+
+
+  
 
 // ongeordende lijstjes met een ander symbool of kleur
 main ul {
