--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,7 +4,7 @@
 // ------------------------
 
 // Greys
-$color-white: rgba(250,250,250,1);
+$color-white: rgba(254,254,254,1);
 $color-grey-1:rgba(240,240,240,1);
 $color-grey-2:rgba(180,180,180,1);
 $color-grey-3:rgba(90,90,90,1);
@@ -15,13 +15,13 @@ $color-black:rgba(0,0,0,1);
 // Website
 $mycolor-1:#2e2d60;
 $mycolor-2:#515ea4;
-$mycolor-3:#d16a5c;
-$mycolor-4:#e1a280;
+$mycolor-3:#e87263;
+$mycolor-4:#f9ab81;
 $mycolor-5:#68a8de;
 
 $body-bg: $color-white;
 $body-color: $color-grey-4;
-$body-link: $mycolor-5;
+$body-link: $mycolor-2;
 
 
 // Client specific
@@ -49,9 +49,9 @@ $myfont-family-title: 'Nunito';
 // sizes
 $font-size-base: 16px;
 $lineheight-base: 1.6em;
-$font-weight-base: 400;
+$font-weight-base: 300;
 $font-weight-light: 200;
-$font-weight-bold: 800;
+$font-weight-bold: 600;
 
 
 // Type Client specific
