--- a/_includes/nav_hor.html
+++ b/_includes/nav_hor.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light navbar-custom">
     <div class="container"><!-- <<< verwijder als je navigatie over de ganse breedte wenst -->
         <a class="navbar-brand" href="#">
-            <img class="logo" src="{{ '/images/logo/logo-apart.png' | relative_url }}">
+            <img class="logo" src="{{ 'assets/images/logo/logo-apart.png' | relative_url }}">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavigation" aria-controls="mainNavigation" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
