--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col footer">
                 <p>
-                    Ⓒ 2018 • Autimismus.vzw
+                    Ⓒ 2018 • Autimismus.vzw haha
                     <br>In samenwerking met Gielen Marie en Arteveldehogeschool
                 </p>
                 <p>
                     <a class="logo-footer" href="">
-                        <img width="10%" src="{{site.baseurl}}assets/images/logo/logo-wit.png'}}">
+                        <img width="10%" src="{{site.baseurl}}assets/images/logo/logo-wit.png}}">
                     </a>
                     &nbsp; &nbsp; &nbsp;
                     <a class="logo-footer" href="">
