--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                 </p>
                 <p>
                     <a class="logo-footer" href="">
-                        <img width="10%" src="{{site.baseurl}}assets/images/logo/logo-wit.png}}">
+                        <img width="10%" src="{{site.baseurl}}assets/images/logo/logo-wit.png | relative_url }}">
                     </a>
                     &nbsp; &nbsp; &nbsp;
                     <a class="logo-footer" href="">
