--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col footer">
                 <p>
-                    Ⓒ 2018 • Autimismus.vzw haha
+                    Ⓒ 2018 • Autimismus.vzw
                     <br>In samenwerking met Gielen Marie en Arteveldehogeschool
                 </p>
                 <p>
