--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -9,10 +9,14 @@
   width:100%;
   background-image: url("../images/patroon-vert.png");
   margin-left:-14%;
-  height:91%;
+  height:93%;
   position: absolute;
   background-repeat: repeat;
   z-index:0;
+}
+
+.foto{
+  width:400px;
 }
 
 /* NAVIGATIE
