--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,7 @@
                     </a>
                     &nbsp; &nbsp; &nbsp;
                     <a class="logo-footer" href="">
-                        <img width="15%" src="{{ '/assets/images/logo/logo_arteveldehogeschool.png' | relative_url }}">
-                    </a>
+                            <img src="{{baseurl}}/assets/images/toepassingen/Briefpapier.png" alt="briefpapier met het patroon met een uitsparing." class="w-50">                    </a>
                 </p>   
   
             </div>
