--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                     </a>
                     &nbsp; &nbsp; &nbsp;
                     <a class="logo-footer" href="">
-                            <img src="{{baseurl}}/assets/images/toepassingen/Briefpapier.png" alt="briefpapier met het patroon met een uitsparing." class="w-50">                    </a>
+                            <img src="{{site.url}}/assets/images/toepassingen/logo_arteveldehogeschool.png" alt="briefpapier met het patroon met een uitsparing." class="w-50">                    </a>
                 </p>   
   
             </div>
