--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,11 @@
                 </p>
                 <p>
                     <a class="logo-footer" href="">
-                        <img width="10%" src="{{ '/assets/images/logo/logo-wit.png' | relative_url }}">
+                        <img width="10%" src="{{ '{{site.url}}/1718-3CMO-BaP-marigiel/assets/images/logo/logo-wit.png' | relative_url }}">
                     </a>lol
                     &nbsp; &nbsp; &nbsp;
                     <a class="logo-footer" href="">
-                            <img src="{{site.url}}/1718-3CMO-BaP-marigiel/assets/images/Logo/logo_arteveldehogeschool.png" alt="logo Arteveldehogeschool">
+                        <img width="10%" src="{{site.url}}/1718-3CMO-BaP-marigiel/assets/images/Logo/logo_arteveldehogeschool.png" alt="logo Arteveldehogeschool">
                     </a>
                 </p>   
   
